fix: fix storybook theme & overflow

--- a/www/.storybook/storybook.css
+++ b/www/.storybook/storybook.css
@@ -2,11 +2,18 @@ html,
 .sb-show-main,
 body.sb-show-main.sb-show-padded,
 #storybook-root,
-#storybook-root > div {
+#storybook-root > .theme-wrapper {
   padding: 0 !important;
   height: 100%;
 }
 
+#storybook-root > .theme-wrapper {
+  height: 100%;
+  /* overflow: scroll; */
+}
+
 .storybook-inner {
-  padding: 1.5rem;
+  overflow: scroll;
+  height: 100%;
+  padding: 60px;
 }
